--- a/site/config.toml
+++ b/site/config.toml
@@ -28,3 +28,10 @@ canonifyurls = true
   hideHUGOSupport = false
   [params.social]
     twitter = "your_twitter"
+
+	backend
+	name = github
+	repo = dlyn5$github.com/casper-cms-template # Path to your Github repository
+	branch = master # Branch to update (master by default)
+	
+
