--- a/site/static/admin/config.yml
+++ b/site/static/admin/config.yml
@@ -1,6 +1,6 @@
 backend:
-  name: github
-  repo: owner/repository # Path to your Github repository
+  name: casper-cms-template
+  repo: dlyn5/https://github.com/Dlyn5/casper-cms-template.git # Path to your Github repository
   branch: master # Branch to update (master by default)
 
 publish_mode: editorial_workflow
