--- a/site/static/admin/config.yml
+++ b/site/static/admin/config.yml
@@ -1,6 +1,6 @@
 backend:
   name: dlyn5-blog
-  repo: dlyn5/Users/darla/Documents/GitHub/casper-cms-template.git #github.com/Dlyn5/casper-cms-template.git # Path to your Github repository
+  repo: dlyn5/github.com/Dlyn5/casper-cms-template.git # Path to your Github repository
   branch: master # Branch to update (master by default)
 
 publish_mode: editorial_workflow
